--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-currency-input-field": "^3.6.14",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
